--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
           <li></li>
         </ul>
       </nav>
-    </header>
 
-    <h3>
-    </h3>
+      <h3>Site Name</h3>
+    </header>
   </body>
 </html>
