--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li></li>
+          <li></li>
+        </ul>
+      </nav>
 
+      <h3>Site Name</h3>
+    </header>
   </body>
 </html>
